deploy/integrations/istio/sticky-sessions.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sticky-jira
spec:
  host: jira.jira.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          # set a new session cookie with istio per atlassian guidelines: https://confluence.atlassian.com/enterprise/jira-data-center-load-balancer-examples-781200827.html
          # note: this cookie is explicitly different than JSESSIONID, let jira handle that
          name: JIRACONSISTENTHASH
          path: /
          ttl: 300m
