deploy/integrations/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jira
spec:
  hosts:
  - jira.dev.dsop.io
  gateways:
  - istio-ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jira.jira.svc.cluster.local
        port:
          number: 8080
